syntax = "proto3";

package pluginproto;

option go_package = "./;pluginproto";


// 插件信息
message PluginInfo {
    // 插件唯一编号
    string No = 1;
    // 插件名称
    string name = 2;
    // 插件拥有的方法
    repeated string methods = 3;
    // 插件版本
    string version = 4;
    // 插件优先级, 数字越大优先级越高
    int32 priority = 5;
    // PersistAfter方法是否同步调用
    bool persistAfterSync = 6;
    // Reply方法是否同步调用
    bool replySync = 7;
    // 注册的http post请求路径
    repeated string postPaths = 8;
    // 注册的http get请求路径
    repeated string getPaths = 9;
}

message SendPacket {
    // 发送者
    string from = 1;
    // 接收频道
    string channelId = 2;
    // 频道类型
    uint32 channelType = 3;  
    // 消息内容
    bytes payload = 4;
}

message Message {
    // 消息唯一id（全局唯一）
    int64 messageId = 1;
    // 消息序号（频道内严格递增）
    uint32 messageSeq = 2;
    // 客户端消息编号
    string clientMsgNo = 3;
    // 流编号
    string streamNo = 4;
    // 流序号
    uint32 streamSeq = 5;
    // 消息时间戳
    uint32 timestamp = 6;
    // 发送者
    string from = 7;
     // 接收频道
     string channelId = 8;
     // 频道类型
     uint32 channelType = 9;  
     // topic
     string topic = 10;
    // 消息内容
    bytes payload = 11;
}


message MessageBatch {
    repeated Message messages = 1;
}

// http请求
message HttpRequest {
    // 请求方法
    string method = 1;
    // 请求路径
    string path = 2;
    // 请求头
    map<string, string> headers = 3;
    // 查询参数
    map<string, string> query = 4;
    // 请求体
    bytes body = 5;
}

// http响应
message HttpResponse {
    // 状态码
    int32 status = 1;
    // 响应头
    map<string, string> headers = 2;
    // 响应体
    bytes body = 3;
}